2005-11-02  harald  <harald@jever.home.>

	* po/system-config-network.pot 1.13, ChangeLog 1.143:
	release 1.3.30-1 moved

	* ChangeLog 1.142, po/POTFILES.in 1.32, src/Makefile.am 1.77:
	release 1.3.30-1

	* Makefile.am 1.60, configure.in 1.180, internet-druid.console 1.2, internet-druid.desktop.in 1.6, system-config-network.spec.in 1.22:
	- removed interdruid
	- reversed Cancel/Ok button ordering

	* src/netconfpkg/gui/chooseprovider.glade 1.10, src/netconfpkg/gui/cipeconfig.glade 1.17, src/netconfpkg/gui/devicetype.glade 1.11, src/netconfpkg/gui/dialupconfig.glade 1.26, src/netconfpkg/gui/dslconfig.glade 1.23, src/netconfpkg/gui/editadress.glade 1.16, src/netconfpkg/gui/editdomain.glade 1.13, src/netconfpkg/gui/edithosts.glade 1.11, src/netconfpkg/gui/ethernetconfig.glade 1.18, src/netconfpkg/gui/ethernethardware.glade 1.13, src/netconfpkg/gui/hardwaretype.glade 1.13, src/netconfpkg/gui/isdnhardware.glade 1.13, src/netconfpkg/gui/modemconfig.glade 1.16, src/netconfpkg/gui/neat-control-propertiesdialog.glade 1.12, src/netconfpkg/gui/ptpconfig.glade 1.6, src/netconfpkg/gui/tokenringconfig.glade 1.18, src/netconfpkg/gui/tokenringhardware.glade 1.14, src/netconfpkg/gui/tonline.glade 1.8, src/netconfpkg/gui/wirelessconfig.glade 1.28:
	reversed Cancel/OK ordering

2005-10-31  kmilos  <kmilos@jever.home.>

	* po/sr.po 1.2: *** empty log message ***

2005-10-28  dheche  <dheche@jever.home.>

	* po/id.po 1.4: *** empty log message ***

2005-10-28  arclynx  <arclynx@jever.home.>

	* po/ms.po 1.33: Updated Malay translation

2005-10-25  harald  <harald@jever.home.>

	* ChangeLog 1.140, configure.in 1.179, po/system-config-network.pot 1.12, system-config-network.spec.in 1.21:
	release 1.3.29-1

	* src/netconfpkg/gui/neat-control.glade 1.7:
	fixed profileFrame labeling

2005-10-23  arclynx  <arclynx@jever.home.>

	* po/ms.po 1.32: Updated Malay translation

2005-10-21  raven  <raven@jever.home.>

	* po/pl.po 1.18: Update and another improvements
