@@ -4,7 +4,7 @@ MAJOR=1
 MINOR=3
 RELEASE=30
 
-RPM_RELEASE=1
+RPM_RELEASE=2
 
 AM_INIT_AUTOMAKE(system-config-network, $MAJOR.$MINOR.$RELEASE)
 
