@@ -1,5 +1,9 @@
 2005-11-02  harald  <harald@jever.home.>
 
+	* ChangeLog 1.144: release 1.3.30-1 moved
+
+	* system-config-network.spec.in 1.23: *** empty log message ***
+
 	* po/system-config-network.pot 1.13, ChangeLog 1.143:
 	release 1.3.30-1 moved
 
